[package]
name = "simple-window"
description = "A simple, cross-platform window creation library."
repository = "https://github.com/berylllium/simple-window"
version = "0.2.3"
edition = "2021"
license = "LGPL-3.0-only"
exclude = [
    "src/main.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
raw-window-handle = "=0.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System", "Win32_System_LibraryLoader", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"
xcb = { version = "1.4.0", features = ["xlib_xcb"] }
